// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for array of auth types 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "None",
      "properties": Object {
        "authType": Object {
          "const": "none",
          "type": "string",
        },
      },
      "required": Array [
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "Basic authentication",
      "properties": Object {
        "authType": Object {
          "const": "basic",
          "type": "string",
        },
        "password": Object {
          "label": "Password",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "username": Object {
          "label": "Username",
          "minLength": 1,
          "type": "string",
        },
      },
      "required": Array [
        "username",
        "password",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "Bearer token",
      "properties": Object {
        "authType": Object {
          "const": "bearer",
          "type": "string",
        },
        "token": Object {
          "label": "Token",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "token",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "OAuth Client Credentials",
      "properties": Object {
        "authType": Object {
          "const": "oauth_client_credentials",
          "type": "string",
        },
        "clientId": Object {
          "label": "Client ID",
          "minLength": 1,
          "type": "string",
        },
        "clientSecret": Object {
          "label": "Client secret",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "scope": Object {
          "label": "Scope",
          "type": "string",
        },
        "tokenUrl": Object {
          "format": "uri",
          "label": "Token URL",
          "type": "string",
        },
      },
      "required": Array [
        "tokenUrl",
        "clientId",
        "clientSecret",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "API key header authentication",
      "properties": Object {
        "authType": Object {
          "const": "api_key_header",
          "type": "string",
        },
        "custom-api-key-field": Object {
          "label": "API key",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "custom-api-key-field",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for single auth types 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "None",
      "properties": Object {
        "authType": Object {
          "const": "none",
          "type": "string",
        },
      },
      "required": Array [
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for single auth types 2`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "Basic authentication",
      "properties": Object {
        "authType": Object {
          "const": "basic",
          "type": "string",
        },
        "password": Object {
          "label": "Password",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "username": Object {
          "label": "Username",
          "minLength": 1,
          "type": "string",
        },
      },
      "required": Array [
        "username",
        "password",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for single auth types 3`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "Bearer token",
      "properties": Object {
        "authType": Object {
          "const": "bearer",
          "type": "string",
        },
        "token": Object {
          "label": "Token",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "token",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for single auth types 4`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "OAuth Client Credentials",
      "properties": Object {
        "authType": Object {
          "const": "oauth_client_credentials",
          "type": "string",
        },
        "clientId": Object {
          "label": "Client ID",
          "minLength": 1,
          "type": "string",
        },
        "clientSecret": Object {
          "label": "Client secret",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "scope": Object {
          "label": "Scope",
          "type": "string",
        },
        "tokenUrl": Object {
          "format": "uri",
          "label": "Token URL",
          "type": "string",
        },
      },
      "required": Array [
        "tokenUrl",
        "clientId",
        "clientSecret",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false correctly generates schemas for single auth types 5`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "API key header authentication",
      "properties": Object {
        "authType": Object {
          "const": "api_key_header",
          "type": "string",
        },
        "custom-api-key-field": Object {
          "label": "API key",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "custom-api-key-field",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = false returns empty object schema when no auth types are provided 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": Object {},
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for array of auth types 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "anyOf": Array [
    Object {
      "additionalProperties": false,
      "label": "None",
      "properties": Object {
        "authType": Object {
          "const": "none",
          "type": "string",
        },
      },
      "required": Array [
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "Basic authentication",
      "properties": Object {
        "authType": Object {
          "const": "basic",
          "type": "string",
        },
        "password": Object {
          "label": "Password",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "username": Object {
          "label": "Username",
          "minLength": 1,
          "type": "string",
        },
      },
      "required": Array [
        "username",
        "password",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "Bearer token",
      "properties": Object {
        "authType": Object {
          "const": "bearer",
          "type": "string",
        },
        "token": Object {
          "label": "Token",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "token",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "OAuth Client Credentials",
      "properties": Object {
        "authType": Object {
          "const": "oauth_client_credentials",
          "type": "string",
        },
        "clientId": Object {
          "label": "Client ID",
          "minLength": 1,
          "type": "string",
        },
        "clientSecret": Object {
          "label": "Client secret",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
        "scope": Object {
          "label": "Scope",
          "type": "string",
        },
        "tokenUrl": Object {
          "format": "uri",
          "label": "Token URL",
          "type": "string",
        },
      },
      "required": Array [
        "tokenUrl",
        "clientId",
        "clientSecret",
        "authType",
      ],
      "type": "object",
    },
    Object {
      "additionalProperties": false,
      "label": "API key header authentication",
      "properties": Object {
        "authType": Object {
          "const": "api_key_header",
          "type": "string",
        },
        "custom-api-key-field": Object {
          "label": "API key",
          "minLength": 1,
          "sensitive": true,
          "type": "string",
        },
      },
      "required": Array [
        "custom-api-key-field",
        "authType",
      ],
      "type": "object",
    },
  ],
  "label": "Authentication",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for single auth types 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "label": "None",
  "properties": Object {
    "authType": Object {
      "const": "none",
      "type": "string",
    },
  },
  "required": Array [
    "authType",
  ],
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for single auth types 2`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "label": "Basic authentication",
  "properties": Object {
    "authType": Object {
      "const": "basic",
      "type": "string",
    },
    "password": Object {
      "label": "Password",
      "minLength": 1,
      "sensitive": true,
      "type": "string",
    },
    "username": Object {
      "label": "Username",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": Array [
    "username",
    "password",
    "authType",
  ],
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for single auth types 3`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "label": "Bearer token",
  "properties": Object {
    "authType": Object {
      "const": "bearer",
      "type": "string",
    },
    "token": Object {
      "label": "Token",
      "minLength": 1,
      "sensitive": true,
      "type": "string",
    },
  },
  "required": Array [
    "token",
    "authType",
  ],
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for single auth types 4`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "label": "OAuth Client Credentials",
  "properties": Object {
    "authType": Object {
      "const": "oauth_client_credentials",
      "type": "string",
    },
    "clientId": Object {
      "label": "Client ID",
      "minLength": 1,
      "type": "string",
    },
    "clientSecret": Object {
      "label": "Client secret",
      "minLength": 1,
      "sensitive": true,
      "type": "string",
    },
    "scope": Object {
      "label": "Scope",
      "type": "string",
    },
    "tokenUrl": Object {
      "format": "uri",
      "label": "Token URL",
      "type": "string",
    },
  },
  "required": Array [
    "tokenUrl",
    "clientId",
    "clientSecret",
    "authType",
  ],
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true correctly generates schemas for single auth types 5`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "label": "API key header authentication",
  "properties": Object {
    "authType": Object {
      "const": "api_key_header",
      "type": "string",
    },
    "custom-api-key-field": Object {
      "label": "API key",
      "minLength": 1,
      "sensitive": true,
      "type": "string",
    },
  },
  "required": Array [
    "custom-api-key-field",
    "authType",
  ],
  "type": "object",
}
`;

exports[`generateSecretsSchemaFromSpec with collapseSingleAuthType = true returns empty object schema when no auth types are provided 1`] = `
Object {
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": Object {},
  "type": "object",
}
`;
